# pterodactyl_api_client_rust

./: Cargo.toml  README.md
src/: http.rs  lib.rs  structs.rs
src/application/: mod.rs  nests.rs  nodes.rs  servers.rs  structs.rs
src/application/structs/: allocation.rs  mod.rs  nest.rs  node.rs  server.rs  utils.rs
src/client/: files.rs  mod.rs  startup.rs  structs.rs  websocket.rs
