[package]
name = "pterodactyl_api"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Library to interface with the Pterodactyl API"
homepage = "https://github.com/Retterm/pterodactyl_api_client_rust"
repository = "https://github.com/Retterm/pterodactyl_api_client_rust"

[features]
stream = ["reqwest/stream", "futures-core"]
websocket = ["async-tungstenite", "futures-io", "futures-util"]

[dev-dependencies]
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime", "tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["macros"] }

[dependencies]
async-tungstenite = { version = "0.29.1", optional = true }
bytes = "1.10.1"
futures-core = { version = "0.3.31", optional = true }
futures-io = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", optional = true }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.38", features = ["parsing"] }
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
