[package]
name = "pterodactyl_api"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Library to interface with the Pterodactyl API"
homepage = "https://github.com/Retterm/pterodactyl_api_client_rust"
repository = "https://github.com/Retterm/pterodactyl_api_client_rust"

[features]
stream = ["reqwest/stream", "futures-core"]
websocket = ["async-tungstenite", "futures-io", "futures-util"]

[dev-dependencies]
async-tungstenite = { version = ">=0.29", features = [
    "tokio-runtime",
    "tokio-native-tls",
] }
tokio = { version = ">=1", features = ["macros"] }

[dependencies]
async-tungstenite = { version = ">=0.29", optional = true }
bytes = ">=1.10"
futures-core = { version = ">=0.3", optional = true }
futures-io = { version = ">=0.3", optional = true }
futures-util = { version = ">=0.3", optional = true }
reqwest = { version = ">=0.12", features = ["json"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = ">=1"
thiserror = ">=2"
time = { version = ">=0.3", features = ["parsing"] }
urlencoding = ">=2"
uuid = { version = ">=1.15", features = ["serde"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
